<resources>
    <string name="app_name">Calculadora</string>
    <string name="resultado">Resultado</string>
    <string name="btn1">1</string>
    <string name="initScreen">0</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="borrar">Borrar</string>
    <string name="btnMas">+</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btnMenos">-</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btnProducto">*</string>
    <string name="addDot">.</string>
    <string name="btnCero">0</string>
    <string name="btnIgual">=</string>
</resources>
